<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_main"
    tools:context="cn.xufucun.music.MainActivity">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:hint="@string/search"/>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:layout_below="@id/et_search"
        android:layout_marginTop="@dimen/margin_top"
        android:scaleType="centerCrop"
        android:src="@drawable/banner1"/>

        <LinearLayout
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/banner"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singer"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_equalizer_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaderboards"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_music_video_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mv"/>

            </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/a1"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/singer1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singer_height_main"
            android:layout_weight="1"
           android:src="@drawable/img_singer"/>

        <ImageView
            android:id="@+id/singer2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singer_height_main"
            android:layout_weight="1"
            android:src="@drawable/img_singer"/>

        <ImageView
            android:id="@+id/singer3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singer_height_main"
            android:layout_weight="1"
            android:src="@drawable/img_singer"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_now_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/song_name"
                android:textSize="@dimen/song_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lyrics"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
